--- a/arch/arm64/configs/x500_defconfig
+++ b/arch/arm64/configs/x500_defconfig
@@ -549,3 +549,11 @@ CONFIG_HAVE_TRUSTONIC_TEE_SUPPORT=y
 CONFIG_FINGERPRINT_GOODIX_GF_TEE=y
 # goodix fingerprint end
 #
+# Pseudo filesystems
+#
+CONFIG_SQUASHFS=y
+CONFIG_SQUASHFS_LZ4=y
+CONFIG_SQUASHFS_FILE_DIRECT=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_SQUASHFS_XATTR=y
+#
