--- a/arch/arm64/configs/x500_defconfig
+++ b/arch/arm64/configs/x500_defconfig
@@ -484,6 +484,7 @@ CONFIG_EXT3_FS=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_SDCARD_FS=y
 CONFIG_EXT4_DEBUG=y
 CONFIG_QUOTA=y
 CONFIG_QFMT_V2=y
