--- a/arch/arm64/boot/dts/mt6795.dtsi
+++ b/arch/arm64/boot/dts/mt6795.dtsi
@@ -1665,6 +1665,23 @@
 	};
 
 /* sensor end */
+
+/* Mounting partitions early (first stage mount) */
+   firmware {
+     android {
+       compatible = "android,firmware";
+   fstab {
+     compatible = "android,fstab";
+     system {
+       compatible = "android,system";
+       dev = "/dev/block/platform/mtk-msdc.0/11230000.MSDC0/by-name/system";
+       type = "ext4";
+       mnt_flags = "ro,barrier=0";
+       fsmgr_flags = "wait";
+      };
+     };
+   };
+ };
 };
 
 /include/ "trusty.dtsi"
